# FloodMind

./: .env.example  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTED_MODULES.md  MANIFEST.in  README.md  config.yaml  main.py  matplotlibrc  package-lock.json  pyproject.toml  requirements.txt  scheduler.py  sitecustomize.py  start.py  web_server.py
.claude/: settings.local.json
.floodmind/: mcp.json
agent/: __init__.py  context_runtime.py  flood_agent.py  scheduled_task_runtime.py
agent/native/: __init__.py  artifact_watcher.py  event_bus.py  executor.py  message_builder.py  model_client.py  native_flood_agent.py  planner.py  tool_runtime.py  types.py
agent/runtime/: __init__.py
config/: __init__.py  model_presets.py  settings.py
docs/: DEVELOPER_GUIDE.md
docs/architecture/: ASSESSMENT.md  D_STORAGE_PROPOSAL.md  MCP_ARCHITECTURE.md  OVERVIEW.md  SKILL_ARCHITECTURE.md
floodmind/: __init__.py  cli.py  cli_interactive.py
memory/: __init__.py  agent_loop_state.json  chat_history.json  dual_memory.py  execution_journal.json  experience_tree.py  global_search.py  long_term_memory.md  memory.md  session_manager.py  simple_memory.py  task_experience.py
models/: __init__.py  qwen_llm_service.py
rag/: __init__.py  embeddings.py  retriever.py  text_splitters.py  vector_store.py
scripts/: build_knowledge_base.py  check_qwen_reasoning.py
skills/: __init__.py  base.py  chronos_pipeline.py  hydro_case_client.py
tests/: conftest.py  test_agent_tool.py  test_artifact_validation.py  test_background_review.py  test_checkpoint_service.py  test_cli_commands.py  test_context_compressor.py  test_execution_journal_service.py  test_execution_plan.py  test_executor.py  test_experience_tree.py  test_guardrails.py  test_mcp_client.py  test_memory_dual.py  test_memory_tools.py  test_model_presets.py  test_model_resolver.py  test_model_router.py  test_native_agent_workspace.py  test_path_service_workspace.py  test_permission_service.py  test_permission_tier.py  test_plan_mode_gate.py  test_plan_update.py  test_profile_system.py  test_sandbox_service.py  test_sdk_agent.py  test_search_config.py  test_session_store_fts5.py  test_session_store_migration.py  test_settings.py  test_skill_curator.py  test_skill_registry.py  test_subagent_report.py  test_todo_tools.py  test_tool_execution_service.py  test_tracing_service.py  test_web_client.py  test_workspace.py
tools/: __init__.py  agent_tool.py  base_tools.py  file_tools.py
web/: .gitignore  app.js  auto-imports.d.ts  config.json  index.html  package-lock.json  package.json  styles.css  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
workflows/: __init__.py  hydro_workflow_graph.py
(+339 files in other folders)
